# math

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/cranelift/: mod.rs
compiler/src/naga/: mod.rs
interpreter/: Cargo.toml
interpreter/src/: identifier.rs  lib.rs  parser.rs  value.rs
interpreter/src/value/: define.rs  expr.rs  factor.rs  fraction.rs  func.rs  mod.rs  term.rs
massi/: Cargo.toml
massi/src/: lib.rs
src/: identifier.rs  lib.rs  value.rs
