[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { path = "../interpreter" }
cranelift-codegen = { version = "0.82", optional = true }
cranelift-frontend = { version = "0.82", optional = true }
cranelift-native = { version = "0.82", optional = true }
cranelift-jit = { version = "0.82", optional = true }
cranelift-module = { version = "0.82", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = ["cranelift"]
cranelift = [
    "cranelift-codegen", "cranelift-frontend", 
    "cranelift-native", "cranelift-jit", 
    "cranelift-module", "anyhow"
]