[package]
name = "massi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { path = "../interpreter" }
compiler = { path = "../compiler", optional = true }


[features]
cranelift = ["compiler/cranelift"]
naga = ["compiler/naga"]